# bripinfo-api

./: .dockerignore  .gitignore  Procfile  README.md  Spacefile  fly.toml  pyproject.toml  requirements.txt
bripinfo_api/: core.py  main.py  requirements.txt  settings.py
bripinfo_api/.deta/: prog_info  state
tests/: test_main.py
