[tool.poetry]
name = "bripinfo-api"
version = "0.1.0"
description = ""
authors = ["Rogério Paulo <rogeriopaulos@gmail.com>"]
readme = "README.md"
packages = [{include = "bripinfo_api"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
fastapi = "^0.89.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}


[tool.poetry.group.dev.dependencies]
ipython = "^8.8.0"
flake8 = "^6.0.0"
flake8-isort = "^6.0.0"
autopep8 = "^2.0.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
