[tool.poetry]
name = "bripinfo-api"
version = "0.1.0"
description = ""
authors = ["Rogério Paulo <rogeriopaulos@gmail.com>"]
readme = "README.md"
packages = [{include = "bripinfo_api"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}


[tool.poetry.group.dev.dependencies]
ipython = "^8.23.0"
flake8 = "^7.0.0"
flake8-isort = "^6.1.1"
autopep8 = "^2.1.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
